Had to fix content color bug that probably stemmed from case mismatch for theme name cause enum was 'Dark' not 'dark' not sure...what i came up w/ isn't ideal but there's too many cases for a general way to deal w/ light vs dark, allowing custom coloring while the whole UI has transparency. So basically am stripping any html background that isn't created IN the app and flipping black/white fg based on theme then light shifting chromatic colors if not in theme scope so thats fine i think but time will tell, need more cases to see where it goes wrong. Theme stuff is just very tricky fixing something breaks another especially in the editor but its a little more contained now so all loaded content is scanned and processed, not in the converter like before cause w/ theme changes thats meaningless.

--- a/MonkeyPaste.Avalonia.Web/AppBundle/Editor/src/components/editor/editor-style.css
+++ b/MonkeyPaste.Avalonia.Web/AppBundle/Editor/src/components/editor/editor-style.css
@@ -1,10 +1,11 @@
 
 #editor :is(span, a, em, strong, u, s, sub, sup, img, p, ol, ul, li, div, table, colgroup, col, tbody, tr, td, iframe, blockquote, pre, code):not(.font-color-override-on):not(.ql-code-block):not(.template-label):not(.template-blot) {
-    color: var(--defcontentfgcolor) !important;
+    /*color: var(--defcontentfgcolor);*/
+    /*filter: contrast(30%);*/
 }
 
 #editor :is(span, a, em, strong, u, s, sub, sup, img, p, ol, ul, li, div, table, colgroup, col, tbody, tr, td, iframe, blockquote, pre, code):not(.font-bg-color-override-on):not(.ql-code-block):not(.template-label):not(.template-blot) {
-    background-color: transparent !important;
+    /*background-color: transparent !important;*/
 }
 
 #editor p:has(span.template-blot), #editor li:has(span.template-blot) {
